@@ -49,6 +49,7 @@
 
 <?php
 	makeSectionTabs($defaults);
+	echo '<input name="initialtab" id="initialtab" type="hidden" value="'. $initialtab .'">';
 	echo "<div style=\"clear: both\"></div>";
 
 $i = 0;
